# to_do_list

./: .env  .env.example  README.md  ToDoList API v1.postman_collection.json  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: abdf3b654a5f_rename_deadline_to_due_date_in_tasks.py
app/: menu.py
app/api/: dependencies.py  main.py  projects_router.py  schemas.py  tasks_router.py
app/cli/: console.py
app/commands/: __init__.py  autoclose_overdue.py  scheduler.py
app/db/: session.py
app/exceptions/: __init__.py  base.py  repository_exceptions.py  service_exceptions.py
app/models/: __init__.py  project.py  task.py
app/proj_task/: __init__.py  config.py  crud.py  manager.py  project_task.py  projects.py  repository.py  tasks.py
app/repository/: __init__.py  base.py  project_repository.py  task_repository.py
app/services/: __init__.py  project_service.py  task_service.py
app/utils/: config.py
app2/versions/: 4dc84939f4cc_add_updated_at_column.py  c3447d0c20fb_create_project_table.py  fd09257329f3_rename_name_to_title.py
