[project]
name = "to-do-list"
version = "0.1.0"
description = ""
authors = [
    {name = "Morteza",email = "maddahmasoud@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "apscheduler (>=3.11.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
