[project]
name = "to-do-list"
version = "0.1.0"
description = ""
authors = [
    {name = "Morteza",email = "maddahmasoud@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "apscheduler (>=3.11.1,<4.0.0)",
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "fastapi-users[sqlalchemy] (>=15.0.1,<16.0.0)",
    "imagekitio (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
